[gd_scene load_steps=68 format=1]

[ext_resource path="res://entities/enemy/Enemy1.gd" type="Script" id=1]
[ext_resource path="res://entities/enemy/flying_saucer_by_absurdwordpreferred.png" type="Texture" id=2]
[ext_resource path="res://art/particles/explosion2/tile001.tex" type="Texture" id=3]
[ext_resource path="res://art/particles/explosion2/tile002.tex" type="Texture" id=4]
[ext_resource path="res://art/particles/explosion2/tile003.tex" type="Texture" id=5]
[ext_resource path="res://art/particles/explosion2/tile004.tex" type="Texture" id=6]
[ext_resource path="res://art/particles/explosion2/tile005.tex" type="Texture" id=7]
[ext_resource path="res://art/particles/explosion2/tile006.tex" type="Texture" id=8]
[ext_resource path="res://art/particles/explosion2/tile007.tex" type="Texture" id=9]
[ext_resource path="res://art/particles/explosion2/tile008.tex" type="Texture" id=10]
[ext_resource path="res://art/particles/explosion2/tile009.tex" type="Texture" id=11]
[ext_resource path="res://art/particles/explosion2/tile010.tex" type="Texture" id=12]
[ext_resource path="res://art/particles/explosion2/tile011.tex" type="Texture" id=13]
[ext_resource path="res://art/particles/explosion2/tile012.tex" type="Texture" id=14]
[ext_resource path="res://art/particles/explosion2/tile013.tex" type="Texture" id=15]
[ext_resource path="res://art/particles/explosion2/tile014.tex" type="Texture" id=16]
[ext_resource path="res://art/particles/explosion2/tile015.tex" type="Texture" id=17]
[ext_resource path="res://art/particles/explosion2/tile016.tex" type="Texture" id=18]
[ext_resource path="res://art/particles/explosion2/tile017.tex" type="Texture" id=19]
[ext_resource path="res://art/particles/explosion2/tile018.tex" type="Texture" id=20]
[ext_resource path="res://art/particles/explosion2/tile019.tex" type="Texture" id=21]
[ext_resource path="res://art/particles/explosion2/tile020.tex" type="Texture" id=22]
[ext_resource path="res://art/particles/explosion2/tile021.tex" type="Texture" id=23]
[ext_resource path="res://art/particles/explosion2/tile022.tex" type="Texture" id=24]
[ext_resource path="res://art/particles/explosion2/tile023.tex" type="Texture" id=25]
[ext_resource path="res://art/particles/explosion2/tile024.tex" type="Texture" id=26]
[ext_resource path="res://art/particles/explosion2/tile025.tex" type="Texture" id=27]
[ext_resource path="res://art/particles/explosion2/tile026.tex" type="Texture" id=28]
[ext_resource path="res://art/particles/explosion2/tile027.tex" type="Texture" id=29]
[ext_resource path="res://art/particles/explosion2/tile028.tex" type="Texture" id=30]
[ext_resource path="res://art/particles/explosion2/tile029.tex" type="Texture" id=31]
[ext_resource path="res://art/particles/explosion2/tile030.tex" type="Texture" id=32]
[ext_resource path="res://art/particles/explosion2/tile031.tex" type="Texture" id=33]
[ext_resource path="res://art/particles/explosion2/tile032.tex" type="Texture" id=34]
[ext_resource path="res://art/particles/explosion2/tile033.tex" type="Texture" id=35]
[ext_resource path="res://art/particles/explosion2/tile034.tex" type="Texture" id=36]
[ext_resource path="res://art/particles/explosion2/tile035.tex" type="Texture" id=37]
[ext_resource path="res://art/particles/explosion2/tile036.tex" type="Texture" id=38]
[ext_resource path="res://art/particles/explosion2/tile037.tex" type="Texture" id=39]
[ext_resource path="res://art/particles/explosion2/tile038.tex" type="Texture" id=40]
[ext_resource path="res://art/particles/explosion2/tile039.tex" type="Texture" id=41]
[ext_resource path="res://art/particles/explosion2/tile040.tex" type="Texture" id=42]
[ext_resource path="res://art/particles/explosion2/tile041.tex" type="Texture" id=43]
[ext_resource path="res://art/particles/explosion2/tile042.tex" type="Texture" id=44]
[ext_resource path="res://art/particles/explosion2/tile043.tex" type="Texture" id=45]
[ext_resource path="res://art/particles/explosion2/tile044.tex" type="Texture" id=46]
[ext_resource path="res://art/particles/explosion2/tile045.tex" type="Texture" id=47]
[ext_resource path="res://art/particles/explosion2/tile046.tex" type="Texture" id=48]
[ext_resource path="res://art/particles/explosion2/tile047.tex" type="Texture" id=49]
[ext_resource path="res://art/particles/explosion2/tile048.tex" type="Texture" id=50]
[ext_resource path="res://art/particles/explosion2/tile049.tex" type="Texture" id=51]
[ext_resource path="res://art/particles/explosion2/tile050.tex" type="Texture" id=52]
[ext_resource path="res://art/particles/explosion2/tile051.tex" type="Texture" id=53]
[ext_resource path="res://art/particles/explosion2/tile052.tex" type="Texture" id=54]
[ext_resource path="res://art/particles/explosion2/tile053.tex" type="Texture" id=55]
[ext_resource path="res://art/particles/explosion2/tile054.tex" type="Texture" id=56]
[ext_resource path="res://art/particles/explosion2/tile055.tex" type="Texture" id=57]
[ext_resource path="res://art/particles/explosion2/tile056.tex" type="Texture" id=58]
[ext_resource path="res://art/particles/explosion2/tile057.tex" type="Texture" id=59]
[ext_resource path="res://art/particles/explosion2/tile058.tex" type="Texture" id=60]
[ext_resource path="res://art/particles/explosion2/tile059.tex" type="Texture" id=61]
[ext_resource path="res://art/particles/explosion2/tile060.tex" type="Texture" id=62]
[ext_resource path="res://art/particles/explosion2/tile061.tex" type="Texture" id=63]
[ext_resource path="res://art/particles/explosion2/tile062.tex" type="Texture" id=64]
[ext_resource path="res://art/particles/explosion2/tile063.tex" type="Texture" id=65]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 57.5198, 23.5267 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ) ],
"loop": false,
"name": "Death",
"speed": 50.0
} ]

[node name="Enemy1" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -8 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, -8 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

transform/rot = 110.0
frames = SubResource( 2 )
animation = "Death"

[connection signal="area_enter" from="." to="." method="_on_Enemy1_area_enter"]

[connection signal="finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_finished"]

[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]


